# stock_dashboard

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt  stocks.db
backend/app/: config.py  database.py  default_symbols.py  main.py  models.py
backend/app/routes/: insights.py  stocks.py
backend/app/services/: db_service.py  stock_service.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: CompanySidebar.jsx  CompareChart.jsx  PriceChart.jsx  SummaryCard.jsx  TimeRangeSelector.jsx  WinnerBadge.jsx
frontend/src/sections/: CompareSection.jsx  StockOverview.jsx  TopMoversSection.jsx
frontend/src/services/: api.js
